package inf112.fireboys.model.player;

import inf112.fireboys.coordinateSystem.Position;
import inf112.fireboys.model.ElementState;
import inf112.fireboys.model.entity.IMovable;

/**
 * Represents a player in the game.
 * Implements IPlayer to support movement, velocity, and physics interactions.
 */
public class Player implements IPlayer {
    private ElementState elementState;
    private double velocityX;
    private double velocityY;
    private Position position;
    private Position startPos;
    private double height;
    private double width;
    private double weight;
    private boolean isOnGround;
    private boolean alive;
    private int score = 0;
    private boolean jumpBoostCharged = false;
    private static final double JUMP_IMPULSE_NORMAL = -1.8;
    private static final double JUMP_IMPULSE_BOOSTED = JUMP_IMPULSE_NORMAL * 1.5;
    /**
     * Constructs a Player with the given position and element state.
     * 
     * @param position
     *            the initial position of the player
     * @param elementState
     *            the element state (e.g., FIRE, WATER)
     */
    public Player(Position position, ElementState elementState) {
        this.elementState = elementState;
        this.velocityX = 0;
        this.velocityY = 0;
        this.position = position;
        this.startPos = position;
        this.height = 8.0;
        this.width = 8.0;
        this.weight = 1.0;
        this.isOnGround = true;
        this.alive = true;
    }

    public ElementState getElementState() {
        return elementState;
    }

    @Override
    public Position getStartPos() {
        return startPos;
    }

    public double getVelocityX() {
        return velocityX;
    }

    public void setVelocityX(double velocityX) {
        this.velocityX = velocityX;
    }

    public double getVelocityY() {
        return velocityY;
    }

    public void setVelocityY(double velocityY) {
        this.velocityY = velocityY;
    }

    public Position getPos() {
        return position;
    }

    public void setPos(Position pos) {
        this.position = pos;
    }

    public double getHeight() {
        return height;
    }

    public double getWidth() {
        return width;
    }

    public double getWeight() {
        return weight;
    }

    public boolean isOnGround() {
        return isOnGround;
    }

    public void setOnGroundTRUE() {
        this.isOnGround = true;
    }

    public void setOnGroundFALSE() {
        this.isOnGround = false;
    }

    public boolean isAlive() {
        return alive;
    }

    public void kill() {
        this.alive = false;
    }

    public void addScore(int points) {
        this.score += points;
    }

    public int getScore() {
        return score;
    }

    @Override
    public void grantJumpBoost() {
        jumpBoostCharged = true;
    }

    @Override
    public boolean hasJumpBoost() {
        return jumpBoostCharged;
    }

    @Override
    public double getJumpImpulse() {
        return jumpBoostCharged ? JUMP_IMPULSE_BOOSTED : JUMP_IMPULSE_NORMAL;
    }

    @Override
    public void consumeJumpBoost() {
        jumpBoostCharged = false;
    }

    @Override
    public void whenContact(IMovable movableEntity) {
        return;
    }
}
